--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
     "eslint-config-next": "^13.0.6",
     "next": "^13.0.6",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
+    "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-plugin-tailwindcss": "^3.7.1",
